--- a/demo.html
+++ b/demo.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div>
-        <h1>Connect</h1>
+        <h1>ConnectEmea</h1>
         <form action="connect.php" method="post">
             <input type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
