fix : add title

--- a/demo.html
+++ b/demo.html
@@ -9,6 +9,7 @@
 <body>
     <div>
         <h1>ConnectEmea</h1>
+        <h2>College</h2>
         <form action="connect.php" method="post">
             <input type="text" name="username" placeholder="Username">
             <input type="password" name="password" placeholder="Password">
